FileSystems use URIs now instead of URLs (refactoring) to support VFS and sftp, etc.
svn path=/dasCore/community/autoplot/trunk/; revision=4622